--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="portfolio-card">
-        <a
+        <a class="card-link"
           href="https://www.google.com/search?sca_esv=a63cfb001f674c6a&rlz=1C1GCEA_enGE1128GE1128&sxsrf=AHTn8zoTh3Cqc7qfT56AwAaBbAFAjkaf1w:1743839892889&q=thomas+andre&udm=2&fbs=ABzOT_CWdhQLP1FcmU5B0fn3xuWpA-dk4wpBWOGsoR7DG5zJBjLjqIC1CYKD9D-DQAQS3Z44LBK6yTXN_5587Z3ya9D7DSaxM-14xIFnNO9Sk1S85X0iXbPUPu28SKnHFo5GfkUICui4lLn3ATGoR-tb1ZTBwCNpjY3xJNQ6dJW4hOKD49dzF9IKZVhIjFsh_SeTVzkVGgjUCUC1efJ3ynqSJKZDo-halg&sa=X&sqi=2&ved=2ahUKEwjRoPHqtcCMAxVzHxAIHTQSJiMQtKgLegQIFBAB&biw=1920&bih=953&dpr=1#vhid=KTrgmqRXokXOsM&vssid=mosaic">
           <h2>thomas andre strongest hunter</h2>
           <div class="badge-container">
@@ -84,7 +84,7 @@
 
       <div class="portfolio-card">
 
-        <a href="https://demetregamer2013.github.io/Project-tracking-intro-component/">
+        <a class="card-link" href="https://demetregamer2013.github.io/Project-tracking-intro-component/">
           <h2>Project tracking intro component</h2>
           <div class="badge-container">
             <span class="badge">Web Development</span>
