--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       <div class="portfolio-card">
 
-        <a class="card-link" href="https://demetregamer2013.github.io/Project-tracking-intro-component/">
+        <a class="card-link" href="">
           <h2>Project tracking intro component</h2>
           <div class="badge-container">
             <span class="badge">Web Development</span>
@@ -97,6 +97,67 @@
         </a>
 
       </div>
+
+
+
+      <div class="portfolio-card">
+
+        <a class="card-link" href="https://demetregamer2013.github.io/RTX-9090/">
+          <h2>Intro component with sign-up form</h2>
+          <div class="badge-container">
+            <span class="badge">Frontend_Mentor</span>
+            <span class="badge">React JS</span>
+            <span class="badge">HTML</span>
+            <span class="badge">Frontend</span>
+            <span class="badge">Github</span>
+          </div>
+          <img src="mnmpkjsbvur3xvrydf66.webp" alt="" />
+        </a>
+
+      </div>
+
+
+
+
+
+
+
+      <div class="portfolio-card">
+
+        <a class="card-link" href="https://demetregamer2013.github.io/Conference-ticket-generator/">
+          <h2>Conference ticket generator</h2>
+          <div class="badge-container">
+            <span class="badge">Web Development</span>
+            <span class="badge">React JS</span>
+            <span class="badge">HTML</span>
+            <span class="badge">Frontend</span>
+            <span class="badge">Github</span>
+          </div>
+          <img src="preview.jpg" alt="" />
+        </a>
+
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
   </section>
 </body>
